change vm name on cloudbuild.yaml

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,7 +15,7 @@ steps:
     entrypoint: 'gcloud'
     timeout: 240s
     args: ['compute', 'instances', 
-           'create-with-container', 'my-vm-name',
+           'create-with-container', 'testing-cloud-build-trigger-00',
            '--container-image', 
            'us-central1-docker.pkg.dev/ce-sandbox-358317/my-docker-repo/myimage']
     env:
