--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,22 +2,22 @@ steps:
   # Docker Build
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 
-           'us-central1-docker.pkg.dev/ce-sandbox-358317/my-docker-repo/myimage', 
+           'us-central1-docker.pkg.dev/${PROJECT_ID}/my-docker-repo/myimage', 
            '.']
 
   # Docker Push
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 
-           'us-central1-docker.pkg.dev/ce-sandbox-358317/my-docker-repo/myimage']
+           'us-central1-docker.pkg.dev/${PROJECT_ID}/my-docker-repo/myimage']
 
   # Entrypoint, timeout and environment variables
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'gcloud'
     timeout: 240s
     args: ['compute', 'instances', 
-           'create-with-container', 'testing-cloud-build-trigger-00',
+           'create-with-container', 'my-vm-name-0000001',
            '--container-image', 
-           'us-central1-docker.pkg.dev/ce-sandbox-358317/my-docker-repo/myimage']
+           'us-central1-docker.pkg.dev/c${PROJECT_ID}/my-docker-repo/myimage']
     env:
       - 'CLOUDSDK_COMPUTE_REGION=us-central1'
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
