--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,7 +17,8 @@ steps:
     args: ['compute', 'instances', 
            'create-with-container', 'my-vm-name-0000001',
            '--container-image', 
-           'us-central1-docker.pkg.dev/${PROJECT_ID}/my-docker-repo/myimage']
+           'us-central1-docker.pkg.dev/${PROJECT_ID}/my-docker-repo/myimage',
+           '--shielded-secure-boot']
     env:
       - 'CLOUDSDK_COMPUTE_REGION=us-central1'
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
