--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,7 +18,9 @@ steps:
            'create-with-container', 'my-vm-name-0000001',
            '--container-image', 
            'us-central1-docker.pkg.dev/${PROJECT_ID}/my-docker-repo/myimage',
-           '--shielded-secure-boot']
+           '--shielded-secure-boot'
+           '--network-interface',
+           'stack-type=IPV4_ONLY,subnet=default,no-address']
     env:
       - 'CLOUDSDK_COMPUTE_REGION=us-central1'
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
