--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,7 +20,7 @@ steps:
            'us-central1-docker.pkg.dev/${PROJECT_ID}/my-docker-repo/myimage',
            '--shielded-secure-boot',
            '--network-interface',
-           'stack-type=IPV4_ONLY,subnet=default,no-address']
+           'subnet=default,no-address']
     env:
       - 'CLOUDSDK_COMPUTE_REGION=us-central1'
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
